# sage-restic-manager

./: .gitignore  Cargo.toml  README.md  install.sh  mkdocs.yml
.github/workflows/: docs.yml  release.yml
docs/: configuration.md  docker-volumes.md  getting-started.md  index.md  scheduling.md  security.md  troubleshooting.md  usage.md
src/: backup.rs  cli.rs  discovery.rs  error.rs  main.rs  scheduler.rs  updater.rs
src/config/: app.rs  credentials.rs  mod.rs  schedules.rs  sources.rs  storage.rs
src/restic/: client.rs  mod.rs  progress.rs  types.rs
src/tui/: app.rs  event.rs  input.rs  mod.rs  runner.rs  terminal.rs  theme.rs  widgets.rs
src/tui/screens/: dashboard.rs  logs.rs  mod.rs  repository.rs  restore.rs  scheduler.rs  settings.rs  snapshots.rs  sources.rs
