[package]
name = "sage-restic-manager"
version = "0.1.2"
edition = "2024"
authors = ["sage-restic-manager contributors"]
description = "Production-grade terminal backup management system for Restic on self-hosted servers"
license = "MIT"
repository = "https://github.com/theadeyemiolayinka/sage-restic-manager"
keywords = ["restic", "backup", "tui", "docker", "s3"]
categories = ["command-line-utilities"]

[[bin]]
name = "sage-restic-manager"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = { version = "1", features = ["serde"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
bytesize = { version = "1", features = ["serde"] }
tempfile = "3"
libc = "0.2"
keyring = "3"
minisign-verify = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
